profile response working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="date_hint">dd/mm/yyyy</string>
     <string name="address">Address</string>
     <string name="postal_code">Postal Code</string>
+    <string name="name">Name</string>
 
 
 </resources>
