--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="buy_now">Buy Now</string>
     <string name="quantity">quantity</string>
     <string name="select_category">Select Category</string>
+    <string name="status">Status</string>
 
 
 </resources>
