--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="quantity">quantity</string>
     <string name="select_category">Select Category</string>
     <string name="status">Status</string>
+    <string name="discontinue">Discontinue</string>
+    <string name="active">Active</string>
 
 
 </resources>
