--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="kilo">Kilo</string>
     <string name="add_to_cart">Add to Cart</string>
     <string name="buy_now">Buy Now</string>
-    <string name="quantity">quantity</string>
+    <string name="quantity">quantity:</string>
     <string name="select_category">Select Category</string>
     <string name="status">Status</string>
     <string name="discontinue">Discontinue</string>
@@ -77,10 +77,55 @@
     <string name="apply">Apply</string>
     <string name="enter_product_name">Enter Product Name</string>
     <string name="error_code">"Error\t "</string>
-    <string name="location">Location</string>
+    <string name="location">Location:</string>
     <string name="add_product">Add Product</string>
     <string name="added_to_cart">Added to Cart</string>
     <string name="already_added_to_cart">Item is Already added in Cart</string>
+    <string name="buyers_section">Buyer Section</string>
+    <string name="see_full_profile">See Full Profile</string>
+    <string name="seller_section">Seller Section</string>
+    <string name="setup_store">Setup Store</string>
+    <string name="go_to_store">Go to Store</string>
+    <string name="active_products">Active Products</string>
+    <string name="distcontinued_products">Discontinued Products</string>
+    <string name="active_orders">Active Orders</string>
+    <string name="completed_orders">Completed Orders</string>
+    <string name="seller_settings">Settings</string>
+    <string name="add_new_product_frag">Add New Product</string>
+    <string name="select_first_image">Select First Image</string>
+    <string name="select_second_image">Select Second Image</string>
+    <string name="select_third_image">Select Third Image</string>
+    <string name="plz_select_product_unit">Please Select Product Unit</string>
+    <string name="cattle">Cattle</string>
+    <string name="please_select_city">Please Select City</string>
+    <string name="log_out_button_text">log out</string>
+    <string name="default_quantity">1</string>
+    <string name="total_rs">Total Rs</string>
+    <string name="check_out">Check Out</string>
+    <string name="shipping_fees">Shipping Fees</string>
+    <string name="subtotal">Subtotal</string>
+    <string name="active_products_frag">Active Products</string>
+    <string name="seller_dashboard">Seller Dashboard</string>
+    <string name="edit_product">Edit Product</string>
+    <string name="order_details_as_seller">Order Details as Seller</string>
+    <string name="order_details_as_buyer_frag">Order Details as Buyer</string>
+    <string name="store_setting">Store Setting</string>
+    <string name="edit_store_details">Edit Store Details</string>
+    <string name="full_user_details">Full User Details</string>
+    <string name="edit_personal_info">Edit Personal Info</string>
+    <string name="edit_personal_info_frag">Edit Personal Info</string>
+    <string name="change_password">Change Password</string>
+    <string name="buyer_dashboard">Buyer Dashboard</string>
+    <string name="order_history">Order History</string>
+    <string name="current_orders">Current Orders</string>
+    <string name="cart">Cart</string>
+    <string name="buyers_order_history">Buyer\'s Orders History</string>
+    <string name="buyer_current_orders">Buyer Current Orders</string>
+    <string name="order_details">Order Details</string>
+    <string name="payment_options">Payment Options</string>
+    <string name="select_payment_method">Select Payment Method</string>
+    <string name="place_order">Place Order</string>
+    <string name="see_All">See All</string>
 
 
 </resources>
