--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,7 +115,6 @@
     <string name="edit_personal_info">Edit Personal Info</string>
     <string name="edit_personal_info_frag">Edit Personal Info</string>
     <string name="change_password">Change Password</string>
-    <string name="buyer_dashboard">Buyer Dashboard</string>
     <string name="order_history">Order History</string>
     <string name="current_orders">Current Orders</string>
     <string name="cart">Cart</string>
@@ -126,6 +125,21 @@
     <string name="select_payment_method">Select Payment Method</string>
     <string name="place_order">Place Order</string>
     <string name="see_All">See All</string>
+    <string name="choose_payment_option">Choose Payment Option</string>
+    <string name="cod">Cash On Delivery</string>
+
+    <string name="search">Search</string>
+    <string name="community">Community</string>
+
+    <string name="profile">Profile</string>
+    <string name="community_section">Community Section</string>
+    <string name="choose_image">Choose Image</string>
+    <string name="camera">Camera</string>
+    <string name="my_contributions">My Contributions</string>
+    <string name="title">title</string>
+    <string name="date">Date</string>
+    <string name="buyer_dashboard">Buyer Dashboard</string>
+    <string name="community_contributions">Community Contributions</string>
 
 
 </resources>
