--- a/app/src/main/res/values-sd/strings.xml
+++ b/app/src/main/res/values-sd/strings.xml
@@ -4,195 +4,183 @@
 
 
 
-
-
-
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="email">Email</string>
-    <string name="password">Password</string>
-    <string name="login">Login</string>
-    <string name="register_here">Register here</string>
-    <string name="register">Register</string>
-    <string name="login_here">login here</string>
-    <string name="first_name">First Name</string>
-    <string name="radio_button_male">Male</string>
-    <string name="radio_button_female">Female</string>
-    <string name="dob">Date of Birth</string>
-    <string name="select_province">Select Province</string>
-    <string name="select_city">Select City</string>
-    <string name="last_name">Last Name</string>
-    <string name="contact_number">Contact Number</string>
-    <string name="re_enter_password">Re-Enter Password</string>
-    <string name="date_hint">dd/mm/yyyy</string>
-    <string name="address">Address</string>
-    <string name="postal_code">Postal Code</string>
-    <string name="name">Name</string>
-    <string name="description">description</string>
-    <string name="store_name">Store Name</string>
-    <string name="setup">Setup</string>
-    <string name="select_quantity">Select Quantity</string>
-    <string name="dozen">Dozen</string>
-    <string name="liter">Liter</string>
-    <string name="kilo">Kilo</string>
-    <string name="add_to_cart">Add to Cart</string>
-    <string name="buy_now">Buy Now</string>
-    <string name="quantity">quantity:</string>
-    <string name="select_category">Select Category</string>
-    <string name="status">Status</string>
-    <string name="discontinue">Discontinue</string>
-    <string name="active">Active</string>
-    <string name="submit">Submit</string>
-    <string name="forgot_password">Forgot Password</string>
-    <string name="store_desc">About Store</string>
-    <string name="update">Update</string>
-    <string name="change_photo">change Photo</string>
-    <string name="dateofbith">Date Of Birth</string>
-    <string name="city">city</string>
-    <string name="gender">Gender</string>
-    <string name="yes">Yes</string>
-    <string name="no">No</string>
-    <string name="rate">Rate</string>
-    <string name="offers_delivery_out_of_city">Offers Delivery Out Of city</string>
-    <string name="plz_select_city">Please Select City</string>
-    <string name="re_enter_new_password">Re Enter New Password</string>
-    <string name="enter_old_password">Enter Old Password</string>
-    <string name="enter_new_password">Enter New Password</string>
-    <string name="confirm">Confirm</string>
-    <string name="retry">Retry</string>
-    <string name="no_internet">No Internet</string>
-    <string name="no_internet_connection">No Internet Connection</string>
-    <string name="something_went_wrong">"Something went Wrong Error : </string>
-    <string name="cart_is_empty">Cart is Empty</string>
-    <string name="product_details">Product Details</string>
-    <string name="product_ratings">Product Ratings</string>
-    <string name="delivery_charges">Delivery Charges :\t</string>
-    <string name="rupees"> Rupees\t</string>
-    <string name="price">\Price \t</string>
-    <string name="quantity_in_details">Quantity :\t </string>
-    <string name="unit_in_details">unit\t</string>
-    <string name="description_in_detail">Description</string>
-    <string name="home">Home</string>
-    <string name="search_fragment">Search</string>
-    <string name="rs">RS</string>
-    <string name="fragment_product_store">Product Store</string>
-    <string name="product_name">Product Name</string>
-    <string name="product_description">Product Description</string>
-    <string name="price_in_rupees">Price in rupees</string>
-    <string name="select_category_toast">Select Category</string>
-    <string name="select_product_unit_toast">Please Select Product Unit</string>
-    <string name="apply">Apply</string>
-    <string name="enter_product_name">Enter Product Name</string>
-    <string name="error_code">"Error\t "</string>
-    <string name="location">Location:</string>
-    <string name="add_product">Add Product</string>
-    <string name="added_to_cart">Added to Cart</string>
-    <string name="already_added_to_cart">Item is Already added in Cart</string>
-    <string name="buyers_section">Buyer Section</string>
-    <string name="see_full_profile">See Full Profile</string>
-    <string name="seller_section">Seller Section</string>
-    <string name="setup_store">Setup Store</string>
-    <string name="go_to_store">Go to Store</string>
-    <string name="active_products">Active Products</string>
-    <string name="distcontinued_products">Discontinued Products</string>
-    <string name="active_orders">Active Orders</string>
-    <string name="completed_orders">Completed Orders</string>
-    <string name="seller_settings">Settings</string>
-    <string name="add_new_product_frag">Add New Product</string>
-    <string name="select_first_image">Select First Image</string>
-    <string name="select_second_image">Select Second Image</string>
-    <string name="select_third_image">Select Third Image</string>
-    <string name="plz_select_product_unit">Please Select Product Unit</string>
-    <string name="cattle">Cattle</string>
-    <string name="please_select_city">Please Select City</string>
-    <string name="log_out_button_text">Log out</string>
+
+    <string name="email">اي ميل</string>
+    <string name="password">پاسورڊ</string>
+    <string name="login">لاگ ان</string>
+    <string name="register_here">هتي رجسٽر ٿيو</string>
+    <string name="register">رجسٽر</string>
+    <string name="login_here">هتي لاگ ان ڪريو</string>
+    <string name="first_name">پهريون نالو</string>
+    <string name="radio_button_male">مرد</string>
+    <string name="radio_button_female">عورت</string>
+    <string name="dob">ڄم جي تاريخ</string>
+    <string name="select_province">صوبو چونڊيو</string>
+    <string name="select_city">شهر چونڊيو</string>
+    <string name="last_name">آخري نالو</string>
+    <string name="contact_number">رابطي جو نمبر</string>
+    <string name="re_enter_password">ٻيهر پاسورڊ داخل ڪريو</string>
+    <string name="date_hint">ڏينهن/مهينو/سال</string>
+    <string name="address">پتو</string>
+    <string name="postal_code">ٽپال ڪوڊ</string>
+    <string name="name">نالو</string>
+    <string name="description">وضاحت</string>
+    <string name="store_name">اسٽور جو نالو</string>
+    <string name="setup">سيٽ اپ ڪريو</string>
+    <string name="select_quantity">مقدار چونڊيو</string>
+    <string name="dozen">درجن</string>
+    <string name="liter">ليٽر</string>
+    <string name="kilo">ڪلو</string>
+    <string name="add_to_cart">ڪارٽ ۾ شامل ڪريو</string>
+    <string name="buy_now">هاڻ خريد ڪريو</string>
+    <string name="quantity">مقدار:</string>
+    <string name="select_category">زمرو چونڊيو</string>
+    <string name="status">حيثيت</string>
+    <string name="discontinue">بند ڪرڻ</string>
+    <string name="active">سرگرم</string>
+    <string name="submit">جمع ڪرائڻ</string>
+    <string name="forgot_password">پاسورڊ وساري ڇڏيو</string>
+    <string name="store_desc">اسٽور جي باري ۾</string>
+    <string name="update">تازه ڪاري</string>
+    <string name="change_photo">تصوير تبديل ڪريو</string>
+    <string name="dateofbith">ڄم جي تاريخ</string>
+    <string name="city">شهر</string>
+    <string name="gender">جنس</string>
+    <string name="yes">ها</string>
+    <string name="no">نه</string>
+    <string name="rate">شرح</string>
+    <string name="offers_delivery_out_of_city">شهر کان ٻاهر پهچائڻ جي آڇ</string>
+    <string name="plz_select_city">مهرباني ڪري شهر چونڊيو</string>
+    <string name="re_enter_new_password">ٻيهر داخل ڪريو نئون پاس ورڊ</string>
+    <string name="enter_old_password">پراڻو پاسورڊ داخل ڪريو</string>
+    <string name="enter_new_password">نئون پاسورڊ داخل ڪريو</string>
+    <string name="confirm">تصديق ڪرڻ</string>
+    <string name="retry">ٻيهر ڪوشش ڪرڻ</string>
+    <string name="no_internet">انٽرنيٽ ناهي</string>
+    <string name="no_internet_connection">انٽرنيٽ ڪنيڪشن ناهي</string>
+    <string name="something_went_wrong">"ڪجھ غلط ٿي ويو: </string>
+    <string name="cart_is_empty">گاڏي خالي</string>
+    <string name="product_details">گاڏي خالي</string>
+    <string name="product_ratings">پيداوار جي درجه بندي</string>
+    <string name="delivery_charges">پهچائڻ جا خرچ :\t</string>
+    <string name="rupees">رپيا</string>
+    <string name="price">\قيمت \t</string>
+    <string name="quantity_in_details">مقدار :\t </string>
+    <string name="unit_in_details">مقدار يونٽ\t</string>
+    <string name="description_in_detail">وضاحت</string>
+    <string name="home">گھر</string>
+    <string name="search_fragment">ڳولا</string>
+    <string name="rs">رپيا</string>
+    <string name="fragment_product_store">پيداوار جو دڪان</string>
+    <string name="product_name">شئ جو نالو</string>
+    <string name="product_description">پيداوار جي وضاحت</string>
+    <string name="price_in_rupees">روپين ۾ قيمت</string>
+    <string name="select_category_toast">زمرو چونڊيو</string>
+    <string name="select_product_unit_toast">مھرباني ڪري پراڊڪٽ يونٽ چونڊيو</string>
+    <string name="apply">لاڳو ڪرڻ</string>
+    <string name="enter_product_name">پراڊڪٽ جو نالو داخل ڪريو</string>
+    <string name="error_code">"نقص\t "</string>
+    <string name="location">مقام:</string>
+    <string name="add_product">پراڊڪٽ شامل ڪريو</string>
+    <string name="added_to_cart">ڪارٽ ۾ شامل ڪيو ويو</string>
+    <string name="already_added_to_cart">شيون اڳ ۾ ئي ڪارٽ ۾ شامل ڪئي وئي آھي</string>
+    <string name="buyers_section">خريدار سيڪشن</string>
+    <string name="see_full_profile">مڪمل پروفائل ڏسو</string>
+    <string name="seller_section">وڪرو ڪندڙ سيڪشن</string>
+    <string name="setup_store">سيٽ اپ اسٽور</string>
+    <string name="go_to_store">اسٽور ڏانھن وڃو</string>
+    <string name="active_products">موجوده مصنوعات</string>
+    <string name="distcontinued_products">بند ٿيل مصنوعات</string>
+    <string name="active_orders">موجوده آرڊر</string>
+    <string name="completed_orders">مڪمل ٿيل آرڊر</string>
+    <string name="seller_settings">سيٽنگ</string>
+    <string name="add_new_product_frag">نئون پراڊڪٽ شامل ڪريو</string>
+    <string name="select_first_image">منتخب ڪريو پهرين تصوير</string>
+    <string name="select_second_image">ٻيو تصوير چونڊيو</string>
+    <string name="select_third_image">ٽيون تصوير چونڊيو</string>
+    <string name="plz_select_product_unit">مھرباني ڪري پراڊڪٽ يونٽ چونڊيو</string>
+    <string name="cattle">ڍور</string>
+    <string name="please_select_city">مھرباني ڪري شھر چونڊيو</string>
+    <string name="log_out_button_text">ڪم ڇڏڻ</string>
     <string name="default_quantity">1</string>
-    <string name="total_rs">Total Rs</string>
-    <string name="check_out">Check Out</string>
-    <string name="shipping_fees">Shipping Fees</string>
-    <string name="subtotal">Subtotal</string>
-    <string name="active_products_frag">Active Products</string>
-    <string name="seller_dashboard">Seller Dashboard</string>
-    <string name="edit_product">Edit Product</string>
-    <string name="order_details_as_seller">Order Details as Seller</string>
-    <string name="order_details_as_buyer_frag">Order Details as Buyer</string>
-    <string name="store_setting">Store Setting</string>
+    <string name="total_rs">ڪل رپيا</string>
+    <string name="check_out">چيڪ آئوٽ ڪريو</string>
+    <string name="shipping_fees">شپنگ فيس</string>
+    <string name="subtotal">ذيلي ٽوٽل</string>
+    <string name="active_products_frag">فعال مصنوعات</string>
+    <string name="seller_dashboard">وڪرو ڪندڙ ڊيش بورڊ</string>
+    <string name="edit_product">پراڊڪٽ کي تبديل ڪريو</string>
+    <string name="order_details_as_seller">آرڊر تفصيلات وڪرو ڪندڙ طور</string>
+    <string name="order_details_as_buyer_frag">آرڊر جي تفصيل خريد ڪندڙ طور</string>
+    <string name="store_setting">اسٽور سيٽنگ</string>
     <string name="edit_store_details">Edit Store Details</string>
-    <string name="full_user_details">Full User Details</string>
-    <string name="edit_personal_info">Edit Personal Info</string>
-    <string name="edit_personal_info_frag">Edit Personal Info</string>
-    <string name="change_password">Change Password</string>
-    <string name="order_history">Order History</string>
-    <string name="current_orders">Current Orders</string>
-    <string name="cart">Cart</string>
-    <string name="buyers_order_history">Buyer\'s Orders History</string>
-    <string name="buyer_current_orders">Buyer Current Orders</string>
-    <string name="order_details">Order Details</string>
-    <string name="payment_options">Payment Options</string>
-    <string name="select_payment_method">Select Payment Method</string>
-    <string name="place_order">Place Order</string>
-    <string name="see_All">See All</string>
-    <string name="choose_payment_option">Choose Payment Option</string>
-    <string name="cod">Cash On Delivery</string>
+    <string name="full_user_details">مڪمل استعمال ڪندڙ جي تفصيل</string>
+    <string name="edit_personal_info">ذاتي معلومات کي تبديل ڪريو</string>
+    <string name="edit_personal_info_frag">ذاتي معلومات تبديل ڪريو</string>
+    <string name="change_password">پاسورڊ تبديل ڪريو</string>
+    <string name="order_history">آرڊر جي تاريخ</string>
+    <string name="current_orders">موجوده حڪم</string>
+    <string name="cart">ڪارٽ</string>
+    <string name="buyers_order_history">خريدار جي آرڊر جي تاريخ</string>
+    <string name="buyer_current_orders">خريد ڪندڙ موجوده آرڊر</string>
+    <string name="order_details">آرڊر جا تفصيل</string>
+    <string name="payment_options">ادائگي جا اختيار</string>
+    <string name="select_payment_method">منتخب ڪريو ادائگي جو طريقو</string>
+    <string name="place_order">آرڊر جي جاءِ</string>
+    <string name="see_All">سڀ ڏسو</string>
+    <string name="choose_payment_option">ادائگي جا اختيار چونڊيو</string>
+    <string name="cod">ترسيل تي نقد</string>
 
-    <string name="search">Search</string>
-    <string name="community">Community</string>
+    <string name="search">ڳولا</string>
+    <string name="community">ڪميونٽي</string>
 
-    <string name="profile">Profile</string>
-    <string name="community_section">Community Section</string>
-    <string name="choose_image">Choose Image</string>
-    <string name="camera">Camera</string>
-    <string name="my_contributions">My Contributions</string>
-    <string name="title">title</string>
-    <string name="date">Date</string>
-    <string name="buyer_dashboard">Buyer Dashboard</string>
-    <string name="community_contributions">Community Contributions</string>
+    <string name="profile">پروفائل</string>
+    <string name="community_section">ڪميونٽي سيڪشن</string>
+    <string name="choose_image">تصوير چونڊيو</string>
+    <string name="camera">ڪئميرا</string>
+    <string name="my_contributions">منهنجون خدمتون</string>
+    <string name="title">عنوان</string>
+    <string name="date">تاريخ</string>
+    <string name="buyer_dashboard">خريد ڪندڙ ڊيش بورڊ</string>
+    <string name="community_contributions">ڪميونٽي تعاون</string>
 
-    <string name="post_title">Post Title</string>
-    <string name="post_description">Post Description</string>
-    <string name="add_post">Add Post</string>
-    <string name="add_image">Add Image</string>
-    <string name="select_image">Please Select Image</string>
-    <string name="add_community_post">Add Community Post</string>
-    <string name="published_by">Published by</string>
-    <string name="published_on">Published On</string>
-    <string name="post_details">Post Details</string>
-    <string name="app_needs_permissions_to_pick_image">App Needs Permission to Pick Image</string>
-    <string name="update_post">Update Post</string>
-    <string name="edit_community_post">Edit Community Post</string>
-    <string name="see_all">See All</string>
-    <string name="search_product_here">Search Product Here</string>
-    <string name="clear_filters">Clear Filters</string>
-    <string name="filter_applied">Filters Applied</string>
-    <string name="filters_cleared">Filters Cleared</string>
-    <string name="don_t_have_account">Don\'t have Account ?</string>
-
-    <string name="create_account">Create Account</string>
-
-
-
-    <string name="enter_query_to_search">Please Enter Query to Search</string>
-    <string name="sindhi">Sindhi</string>
+    <string name="post_title">پوسٽ جو عنوان</string>
+    <string name="post_description">پوسٽ وضاحت</string>
+    <string name="add_post">پوسٽ شامل ڪريو</string>
+    <string name="add_image">تصوير شامل ڪريو</string>
+    <string name="select_image">مھرباني ڪري تصوير چونڊيو</string>
+    <string name="add_community_post">ڪميونٽي پوسٽ شامل ڪريو</string>
+    <string name="published_by">پاران شايع ٿيل</string>
+    <string name="published_on">تي شايع ٿيل</string>
+    <string name="post_details">پوسٽ تفصيل</string>
+    <string name="app_needs_permissions_to_pick_image">ايپ کي تصوير چونڊڻ جي اجازت جي ضرورت آهي</string>
+    <string name="update_post">پوسٽ اپڊيٽ ڪريو</string>
+    <string name="edit_community_post">ڪميونٽي پوسٽ کي تبديل ڪريو</string>
+    <string name="see_all">سڀ ڏس</string>
+    <string name="search_product_here">پراڊڪٽ ڳوليو هتي</string>
+    <string name="clear_filters">فلٽر صاف ڪريو</string>
+    <string name="filter_applied">فلٽر لاڳو ٿيل</string>
+    <string name="filters_cleared">فلٽر صاف ڪيا ويا</string>
+    <string name="don_t_have_account">اڪائونٽ نه آهي ?</string>
+    <string name="create_account">اڪائونٽ ٺاهيو</string>
+    <string name="enter_query_to_search">مھرباني ڪري ڳولھا لاءِ سوال داخل ڪريو</string>
+    <string name="sindhi">سنڌي</string>
     <string name="from_farm_to_kitchen">فارم کان باورچی خانه تائين</string>
-    <string name="continue_">Continue</string>
+    <string name="continue_">جاري رکو</string>
+    <string name="cancel_order">آرڊر منسوخ ڪريو</string>
+    <string name="order_details_not_loaded">آرڊر جا تفصيل اڃا لوڊ نه ڪيا ويا آهن</string>
+    <string name="no_current_orders">ڪوبه موجوده آرڊر نه</string>
+    <string name="no_completed_orders_yet">اڃا تائين مڪمل ٿيل آرڊر نه آهن</string>
+    <string name="no_active_orders_yet">اڃا تائين ڪوبه آرڊر فعال ناهي</string>
+    <string name="no_active_products">فعال نه پراڊڪٽس</string>
+    <string name="no_discontinued_yet">ڪابه پيداوار اڃا تائين بند نه ڪئي وئي آهي</string>
 
 
-    <string name="cancel_order">Cancel Order</string>
-
-    <string name="order_details_not_loaded">Order Details are not loaded yet</string>
-
-    <string name="no_current_orders">No Current Orders</string>
-
-    <string name="no_completed_orders_yet">No Completed Orders Yet</string>
-    <string name="no_active_orders_yet">No Active Orders Yet</string>
-    <string name="no_active_products">No Active Products</string>
-    <string name="no_discontinued_yet">No Product is Discontinued Yet</string>
-
-
-
-    <string name="no_results_found">No Results Found</string>
-    <string name="enter_text">Please Enter Some Text</string>
+    <string name="no_results_found">ڪي به نتيجا نه مليا</string>
+    <string name="enter_text">مهرباني ڪري ڪجهه داخل ڪريو</string>
     <string name="fambazzar">فام بازار</string>
-    <string name="no_items_found_in">Sorry , No Products Found</string>
+    <string name="no_items_found_in">معاف ڪجو، ڪوبه پراڊڪٽ نه مليو</string>
 
 
 
