--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,7 +162,7 @@
 
     <string name="create_account">Create Account</string>
     <string name="enter_query_to_search">Please Enter Query to Search</string>
-    <string name="sindhi">Sindhi</string>
+    <string name="sindhi">سنڌي</string>
     <string name="from_farm_to_kitchen">From Farm to Kitchen</string>
     <string name="continue_">Continue</string>
     <string name="cancel_order">Cancel Order</string>
