login issue fixed

--- a/app/src/main/res/values-sd/strings.xml
+++ b/app/src/main/res/values-sd/strings.xml
@@ -184,7 +184,7 @@
 
     <string name="change_language">ٻولي تبديل ڪريو</string>
 
-    <string name="do_you_provide_cash_on_delivery_out_of_city">ڇا توهان شهر کان ٻاهر پهچائڻ تي نقد فراهم ڪندا آهيو؟</string>
+    <string name="do_you_provide_cash_on_delivery_out_of_city">شهر کان ٻاهر پهچائڻ کان پوء نقد جي سهولت  فراهم ڪندا آهيو؟</string>
     <string name="code_note">توهان کي پنهنجي ويجھي ڪوريئر سروس فراهم ڪندڙ تي ڪيش آن ڊليوري اڪائونٽ کولڻ جي ضرورت پوندي</string>
 
 
